# nix-machines

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  authorized-keys.nix  bootstrap.sh  config.nix  darwin-compost.sh  dev-server-base.nix  dev-server-hardware.nix  dev-server.nix  dos-compost.sh  flake.nix  home-compost.sh  nohup.out  personal-mac.nix  sentry-mac.nix  shell.nix  surface-book.nix  utils.sh  vbox-compost.sh  vbox.nix  vine-env.patch  vine.nix  work-mac.nix  wsl-compost.sh
ankillio/: Dockerfile  Makefile  docker-compose.yml  requirements.frozen.txt  requirements.txt  setup.py  stack.yml
candid/: default.nix
comboslice/: a.nix  b.nix  default.nix  home.nix  host.nix
compost/: compost.sh  darwin-compost.sh  default.nix  home-compost.sh  utils.sh
docker/: Makefile
docker-images/: Makefile
dotfiles/: Xmodmap  alacritty.yml  bashrc  com.googlecode.iterm2.plist  gitconfig  keybindings.json  logicool-keyboard.ahk  mod_swap  packages.config  profile  surface-keyboard.ahk  vscode-keybindings.json
excalibur/: Xmodmap  home.nix  host.nix
trains/: .lakefile.toml.swp  Dockerfile  Main.lean  Makefile  README.md  Trains.lean  flake.nix  lake-manifest.json  lakefile.toml  package-lock.json  package.json  packages.dhall  pyproject.toml  requirements.frozen.txt  requirements.txt  setup.py  spago.dhall  stack.yml
trains/frontend/: index.html  index.js
trains/src/: App.purs  Main.purs
trains/src/App/: Components.js  Components.purs  Router.purs  Routes.purs
trains/src/trains/: canada.json  map.py  mexico.json  server.py  storage.py
(+380 files in other folders)
