[project]
name = "trains"
version = "0.1.0"
description = "A web-based railroad game built with NiceGUI"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "nicegui>=2.0",
    "aiohttp",
    "requests>=2.0",
    "urllib3>=1.0,<2.0",
    "geojson-pydantic",
    "shapely",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "types-requests>=2.0",
]

[project.scripts]
trains-server = "trains.server:main"
trains-map-viewer = "trains.map:main"

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trains"]

[tool.hatch.build.targets.wheel.force-include]
"src/trains/canada.json" = "trains/canada.json"
"src/trains/mexico.json" = "trains/mexico.json"
"src/trains/ne_50m_lakes.json" = "trains/ne_50m_lakes.json"
"src/trains/rivers_50_na.json" = "trains/rivers_50_na.json"
"src/trains/rivers_na.json" = "trains/rivers_na.json"
"src/trains/usa.json" = "trains/usa.json"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "types-requests>=2.0",
]
